--- a/themewagon.github.io/theinterior/contact.html
+++ b/themewagon.github.io/theinterior/contact.html
@@ -47,7 +47,7 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="index.html"><img class="bg-transparent" style="height: 100px;" src="assets/img/logo/logo1.png" alt=""></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu f-right d-none d-lg-block">
@@ -70,7 +70,7 @@
                         </div>          
                         <!-- Header-btn -->
                         <div class="header-btns d-none d-lg-block f-right">
-                            <a href="#" class="btn header-btn">Contact Us</a>
+                            <a href="contact.html" class="btn header-btn">Contact Us</a>
                         </div>
                         <!-- Mobile Menu -->
                         <div class="col-12">
@@ -139,6 +139,7 @@
                     </script>
                     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&amp;callback=initMap">
                     </script>
+                    
     
                 </div>
                 <div class="row">
