--- a/themewagon.github.io/theinterior/index.html
+++ b/themewagon.github.io/theinterior/index.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.html">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+     
+    <!-- Font Awesome CDN Link -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -46,7 +49,7 @@
                 <div class="menu-wrapper d-flex align-items-center justify-content-between">
                     <!-- Logo -->
                     <div class="logo">
-                        <a href="index.html"><img style="height: 100px;background-color: n;" src="assets/img/logo/logo.jpg" alt=""></a>
+                        <a href="index.html"><img class="bg-transparent" style="height: 100px;" src="assets/img/logo/logo1.png" alt=""></a>
                     </div>
                     <!-- Main-menu -->
                     <div class="main-menu f-right d-none d-lg-block">
@@ -69,7 +72,7 @@
                     </div>          
                     <!-- Header-btn -->
                     <div class="header-btns d-none d-lg-block f-right">
-                        <a href="#" class="btn header-btn">Contact Us</a>
+                        <a href="contact.html" class="btn header-btn">Contact Us</a>
                     </div>
                     <!-- Mobile Menu -->
                     <div class="col-12">
@@ -126,7 +129,8 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-info mb-60">
                         <div class="info-caption">
-                            <h4>30 Days or we pay </h4>
+                            
+                            <h4><i style="color: white; font-size: 95px;padding-right: 10px;color: orange;" class="fa-solid fa-building"></i>30 Days or we pay </h4>
                             <p>you rent</p>
                         </div>
                     </div>
@@ -134,7 +138,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-info mb-60">
                         <div class="info-caption">
-                            <h4>10000+ Happy</h4>
+                            <h4><i style="color: white; font-size: 95px;padding-right: 10px;color: orange;" class="fa-solid fa-house"></i>10000+ Happy</h4>
                             <p>Customers</p>
                         </div>
                     </div>
@@ -142,7 +146,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-info mb-60">
                         <div class="info-caption">
-                            <h4>10000+ Designs</h4>
+                            <h4><i style="color: white; font-size: 95px;padding-right: 10px;color: orange;" class="fa-solid fa-star"></i>10000+ Designs</h4>
                             <p>Experts </p>
                         </div>
                     </div>
@@ -150,7 +154,7 @@
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-info mb-60">
                         <div class="info-caption">
-                            <h4>12 - Years Material</h4>
+                            <h4><i style="color: white; font-size: 95px;padding-right: 10px;color: orange;" class="fas fa-shield-alt"></i>12 - Years Material</h4>
                             <p>Warranty</p>
                         </div>
                     </div>
@@ -236,6 +240,8 @@
     </div>
     <!-- Services Ara End -->
     <!--? Gallery Area Start -->
+    <h1 class="text-center pb-5">Interiors Gallery</h1>
+
     <div class="gallery-area">
         <div class="container-fluid p-0 fix">
             <div class="row">
@@ -326,7 +332,7 @@
                 <div class="col-xl-6 col-lg-4 col-md-6 col-sm-">
                     <div class="single-team mb-30">
                         <div class="team-img">
-                            <p style="color: white;" class=" mt-70">Different Thinkers specializes in creating innovative and functional corporate interior solutions tailored to reflect your brand and business values. We offer services like partition designs, flooring, modular workstations, electrical and plumbing work, AC repair, fire safety systems, and modular office furniture. A well-planned corporate interior not only impresses clients and visitors but also provides a productive and inspiring environment for employees, enhancing overall efficiency and morale.</p>                     
+                            <p class="text-white mt-5 px-3 px-md-4 px-lg-5 text-justify fs-6 fs-md-5 fs-lg-4" style="text-align: justify;">Different Thinkers specializes in creating innovative and functional corporate interior solutions tailored to reflect your brand and business values. We offer services like partition designs, flooring, modular workstations, electrical and plumbing work, AC repair, fire safety systems, and modular office furniture. A well-planned corporate interior not only impresses clients and visitors but also provides a productive and inspiring environment for employees, enhancing overall efficiency and morale.</p>                     
                         </div>
                         <!-- <div class="team-caption">
                             <h3><a href="#">Jhon Sunsa</a></h3>
@@ -391,7 +397,7 @@
                 <div class="col-xl-6 col-lg-4 col-md-6 col-sm-">
                     <div class="single-team mb-30">
                         <div class="team-img">
-                            <p style="color: white;" class=" mt-70">We specialize in residential interior design that transforms your house into a dream home with style, comfort, and functionality. Our team focuses on creating personalized living spaces that reflect your taste and lifestyle, using modern designs and high-quality materials. Whether it's your living room, bedroom, or kitchen, our residential interior solutions ensure a perfect blend of aesthetics and practicality, making every corner of your home warm, inviting, and uniquely yours.     </div>
+                            <p class="text-white mt-5 px-3 px-md-4 px-lg-5 text-justify fs-6 fs-md-5 fs-lg-4" style="text-align: justify;">We specialize in residential interior design that transforms your house into a dream home with style, comfort, and functionality. Our team focuses on creating personalized living spaces that reflect your taste and lifestyle, using modern designs and high-quality materials. Whether it's your living room, bedroom, or kitchen, our residential interior solutions ensure a perfect blend of aesthetics and practicality, making every corner of your home warm, inviting, and uniquely yours.     </div>
                         <!-- <div class="team-caption">
                             <h3><a href="#">Jhon Sunsa</a></h3>
                             <span>Creative derector</span>
@@ -431,7 +437,7 @@
                 <div class="col-xl-6 col-lg-4 col-md-6 col-sm-">
                     <div class="single-team mb-30">
                         <div class="team-img">
-                            <p style="color: white;" class=" mt-70">We offer exceptional office interior solutions that blend style, functionality, and professionalism to create inspiring work environments. Our designs are tailored to reflect your brand identity while maximizing space efficiency and employee comfort. With a focus on modern trends and smart layouts, our office interior services ensure your workspace leaves a lasting impression on clients and boosts productivity among your team.     </div>
+                            <p class="text-white mt-5 px-3 px-md-4 px-lg-5 text-justify fs-6 fs-md-5 fs-lg-4" style="text-align: justify;">We offer exceptional office interior solutions that blend style, functionality, and professionalism to create inspiring work environments. Our designs are tailored to reflect your brand identity while maximizing space efficiency and employee comfort. With a focus on modern trends and smart layouts, our office interior services ensure your workspace leaves a lasting impression on clients and boosts productivity among your team.     </div>
                         <!-- <div class="team-caption">
                             <h3><a href="#">Jhon Sunsa</a></h3>
                             <span>Creative derector</span>
@@ -620,7 +626,7 @@
                         <div class="single-footer-caption mb-50">
                             <!-- logo -->
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.jpg" style="height: 100px;" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logo/logo1.png" style="height: 100px;" alt=""></a>
                             </div>
                             <div class="footer-tittle">
                                 <div class="footer-pera">
