--- a/themewagon.github.io/theinterior/services.html
+++ b/themewagon.github.io/theinterior/services.html
@@ -46,7 +46,7 @@
                     <div class="menu-wrapper d-flex align-items-center justify-content-between">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                            <a href="index.html"><img class="bg-transparent" style="height: 100px;" src="assets/img/logo/logo1.png" alt=""></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu f-right d-none d-lg-block">
@@ -69,7 +69,7 @@
                         </div>          
                         <!-- Header-btn -->
                         <div class="header-btns d-none d-lg-block f-right">
-                            <a href="#" class="btn header-btn">Contact Us</a>
+                            <a href="contact.html" class="btn header-btn">Contact Us</a>
                         </div>
                         <!-- Mobile Menu -->
                         <div class="col-12">
